# QFTbx-prev

./: CMakeLists.txt  QFTbx.pro  README.md  config.pri  main.cpp
Consola/: consola.cpp  consola.h
DAO/: adaptadorbounddao.cpp  adaptadorbounddao.h  adaptadorcontroladordao.cpp  adaptadorcontroladordao.h  adaptadorespecificacionesdao.cpp  adaptadorespecificacionesdao.h  adaptadorloopshapingdao.cpp  adaptadorloopshapingdao.h  adaptadoromegadao.cpp  adaptadoromegadao.h  adaptadorplantadao.cpp  adaptadorplantadao.h  adaptadortemplatedao.cpp  adaptadortemplatedao.h  bounddao.h  controladordao.h  dao.h  especificacionesdao.h  fdao.cpp  fdao.h  loopshapingdao.h  omegadao.h  plantadao.h  templatedao.h
GPU/CUDA/: bnd_cuda.cu  e_hull_cuda.cu
GPU/OpenCL/: e_hull_opencl.cl
GUI/: diagramabode.cpp  diagramabode.h  diagramabode.ui  intdatosboundaries.cpp  intdatosboundaries.h  intdatosboundaries.ui  intespecificaciones.cpp  intespecificaciones.h  intespecificaciones.ui  intincertidumbre.cpp  intincertidumbre.h  intincertidumbre.ui  intloopshaping.cpp  intloopshaping.h  intloopshaping.ui  intomega.cpp  intomega.h  intomega.ui  introducirecontr.cpp  introducirecontr.h  introducirecontr.ui  introducirplanta.cpp  introducirplanta.h  introducirplanta.ui  introducirrango.ui  introducirtemplates.cpp  introducirtemplates.h  introducirtemplates.ui  verboundaries.cpp  verboundaries.h  verboundaries.ui  viewbound.cpp  viewbound.h  viewbound.ui  viewboundreun.cpp  viewboundreun.h  viewboundreun.ui  viewloopshaping.cpp  viewloopshaping.h  viewloopshaping.ui  (+6 more)
GUI/QML/: WindowsgeneralForm.ui.qml  qml.qrc  windowsgeneral.qml
Imagenes/: imagenesPlanta.qrc.depends
Imagenes/imagenes/: especificaciones.tex
Librerias/cxsc/: cxsc.sln  cxsc.vcproj  cxsc.vcxproj
Librerias/cxsc/src/fi_lib/: q_errm.cpp  q_log.cpp
Librerias/cxsc/src/rts/: a_time.c
Librerias/cxsc/win32/: cxscconf.h
Librerias/cxsc/win32/CToolbox/cpz_ex/: cpz_ex.vcproj  cpz_ex.vcxproj
Librerias/cxsc/win32/CToolbox/ddf_ex/: ddf_ex.vcproj  ddf_ex.vcxproj
Librerias/cxsc/win32/CToolbox/fastlss_ex/: fastlss_ex.vcxproj
Librerias/cxsc/win32/CToolbox/gop1_ex/: gop1_ex.vcproj  gop1_ex.vcxproj
Librerias/cxsc/win32/CToolbox/gop_ex/: gop_ex.vcproj  gop_ex.vcxproj
Librerias/cxsc/win32/CToolbox/hess_ex/: hess_ex.vcproj  hess_ex.vcxproj
Librerias/cxsc/win32/CToolbox/jac_ex/: jac_ex.vcproj  jac_ex.vcxproj
Librerias/cxsc/win32/CToolbox/lop_ex/: lop_ex.vcproj  lop_ex.vcxproj
Librerias/cxsc/win32/CToolbox/lss_ex/: lss_ex.vcproj  lss_ex.vcxproj
Librerias/cxsc/win32/CToolbox/make_test/: make_test.txt  make_test.vcproj  make_test.vcxproj
Librerias/cxsc/win32/CToolbox/nlfz_ex/: nlfz_ex.vcproj  nlfz_ex.vcxproj
Librerias/cxsc/win32/CToolbox/nlss_ex/: nlss_ex.vcproj  nlss_ex.vcxproj
Librerias/cxsc/win32/CToolbox/rpe_ex/: rpe_ex.vcproj  rpe_ex.vcxproj
Librerias/cxsc/win32/CToolbox/sumup/: sumup.vcproj  sumup.vcxproj
Librerias/cxsc/win32/CToolbox/tester/: tester.vcproj  tester.vcxproj
Librerias/cxsc/win32/CToolbox/xev_ex1/: xev_ex1.vcproj  xev_ex1.vcxproj
Librerias/cxsc/win32/CToolbox/xev_ex2/: xev_ex2.vcproj  xev_ex2.vcxproj
Librerias/cxsc/win32/CToolbox/xev_ex3/: xev_ex3.vcproj  xev_ex3.vcxproj
Librerias/cxsc/win32/myexample/: myexample.sln
Librerias/cxsc/win32/myexample/myexample/: myexample.cpp  myexample.h  myexample.vcproj  myexample.vcxproj
Librerias/cxsc/win32/nsis/: AddToPath.nsh
Librerias/muparserx/: CMakeLists.txt  muParser_compile.sh
Librerias/qcustomplot/: CMakeLists.txt  qcustomplot.h  qcustomplot.pro  qcustomplot_compile.sh
Librerias/qterminal/: CMakeLists.txt  compile_qterminal.sh
Modelo/: controlador.cpp  controlador.h
Modelo/Boundaries/: algoritmointerseccionlineal1D.cpp  algoritmointerseccionlineal1D.h  algoritmointerseccionproyectivo2D.cpp  algoritmointerseccionproyectivo2D.h  boundaries.cpp  boundaries.h  contour.cpp  contour.h  contour2.cpp  contour2.h
Modelo/EstructuraSistema/: cpolinomios.cpp  cpolinomios.h  formatolibre.cpp  formatolibre.h  funciontransferencia.cpp  funciontransferencia.h  funciontransferenciasimplificada.cpp  funciontransferenciasimplificada.h  kganancia.cpp  kganancia.h  kgananciasimplificada.cpp  kgananciasimplificada.h  knganancia.cpp  knganancia.h  polosceros.cpp  polosceros.h  poloscerossimplificada.cpp  poloscerossimplificada.h  sistema.cpp  sistema.h  sistemasimplificada.cpp  sistemasimplificada.h
Modelo/EstructurasDatos/: datosbound.cpp  datosbound.h  datosloopshaping.cpp  datosloopshaping.h  datosplanta.cpp  datosplanta.h  parlineedit.cpp  parlineedit.h  var.cpp  var.h
Modelo/Herramientas/: tools.cpp  tools.h
Modelo/LoopShaping/: algorithm_isaac.bak.cpp  algorithm_isaac.cpp  algorithm_isaac.h  algorithm_isaac_hilo.cpp  algorithm_isaac_hilo.h  algorithm_nandkishor.cpp  algorithm_nandkishor.h  algorithm_rambabu.cpp  algorithm_rambabu.h  algorithm_sachin.cpp  algorithm_sachin.h  funcionescomunes.h  loopshaping.cpp  loopshaping.h
Modelo/LoopShaping/DeteccionViolacionBoundaries/: deteccionviolacionboundaries.cpp  deteccionviolacionboundaries.h  deteccionviolacionboundaries2D.cpp  deteccionviolacionboundaries2D.h  testdeteccion.cpp  testdeteccion.h
Modelo/LoopShaping/EstructuraDatos/: arbol_exp.cpp  arbol_exp.h  avl.h  listaordenada.cpp  listaordenada.h  nodo.h  tripleta.h
Modelo/LoopShaping/NaturalIntervalExtension/: natural_interval_extension.cpp  natural_interval_extension.h
Modelo/Objetos/: incertidumbre.cpp  incertidumbre.h  omega.cpp  omega.h
Modelo/Templates/: templates.cpp  templates.h
XmlParser/: parserload.h  parsersave.h  xmlparserload.cpp  xmlparsersave.cpp
